--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -46,6 +46,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .font14{font-size: 14px}
 .font13{font-size: 13px}
 .font12{font-size: 12px}
+.font11{font-size: 11px}
+.font10{font-size: 10px}
 
 .fontBold{font-weight: bold;}
 
