--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -138,6 +138,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .headerShadow{box-shadow: 0px 7px 9px -9px #00000036;}
 .footerShadow{box-shadow: 0px -7px 9px -9px #00000036;}
 .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100%; padding-top: 60px;}
+/* .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100vw; height: 100vh; padding-top: 60px; margin-bottom: 60px;} */
 .mt-header{margin-top: 50px;}
  /* .profileTitle{font-size: 15px; font-weight: bold; color: #6768A7;} */
  .top5TitleWrap{margin-top: 1.5rem; border-bottom: 1px solid #6768A7; height: 35px; margin-bottom: 0.4rem}
