--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -17,6 +17,7 @@
 font-family: KoPubDotumMedium;
 }
 
+.headerBottom {box-shadow: 0px 7px 9px -9px #00000036;}
 .headerFont{
     font-family: 'TmonMonsori';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff');
@@ -274,3 +275,12 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .whiteTextBox p {color: #000;}
 .whiteTextBox {float: left; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 3px 15px; margin-bottom: 10px; border-radius: 10px; background: rgba(255, 255, 255, 0.5); }
+
+
+/*수신그룹*/
+.receiverTeamColor{width:30px; height:30px; border-radius:100%; border:2px solid #ccc; margin-right: 5px; margin-top: 7px;}
+
+.receiverTeamListCard{padding: 10px; box-shadow: 0 0 5px 3px #b7b4b440; border-radius: 5px;}
+.receiverTeamListCard input{
+    width: 130px;
+}
