--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -224,6 +224,21 @@ p{margin-bottom: 0; font-size: 1.5rem;}
     100% { transform: translateX(var(--widndowWidth));}
 }
 
+
+.showGroup-enter {animation: showGroup-dialog-fade-in 0.2s ease;}
+.showGroup-leave {animation: showGroup-dialog-fade-out 0.2s ease forwards;}
+.showGroup-enter-active {animation: showGroup-dialog-fade-in 0.2s ease;}
+.showGroup-leave-active {animation: showGroup-dialog-fade-out 0.2s ease forwards;}
+@keyframes showGroup-dialog-fade-in {
+    0% {transform: translateX(var(--widndowWidth));}
+    100% {transform: translateX(0);}
+}
+@keyframes showGroup-dialog-fade-out {
+    0% {transform: translateX(0);}
+    100% { transform: translateX(var(--widndowWidth));}
+}
+
+
 .cursorP {cursor: pointer;}
 
 .overflowYScroll{ overflow-y: scroll; overflow-x: hidden;}
@@ -280,7 +295,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 /*수신그룹*/
 .receiverTeamColor{width:30px; height:30px; border-radius:100%; border:2px solid #ccc; margin-right: 5px; margin-top: 7px;}
 
-.receiverTeamListCard{padding: 10px; box-shadow: 0 0 5px 3px #b7b4b440; border-radius: 5px;}
+.receiverTeamListCard{padding: 10px; box-shadow: 0px 1px 5px 0px #ccc; border-radius: 5px;}
 .receiverTeamListCard input{
     width: 130px;
 }
