--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -59,6 +59,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .commonBlack{color: #303030;}
 .grayBlack{color: #505050;}
 .lightGray{color: #A1A1A1;}
+.lightPurple{color: #6768a712;}
 
 .w-10P{width: 10%;}
 .w-20P{width: 20%;}
@@ -306,5 +307,5 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   background-color: rgba(186, 187, 215, 0.5);
   font-weight: bold;
   transform: rotate(-2deg);
-  /* cursor: move; */
+  -ms-user-select: none;    -moz-user-select: -moz-none;   -khtml-user-select: none;   -webkit-user-select: none;   user-select: none;
 }
