--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -164,7 +164,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
       align-items: center;
       filter: drop-shadow(0 0 6px #0000002E);
   }
-
+  .chanLogoImgWrap {width: 60px; height:60px; border-radius: 60px; display: flex; align-items: center; justify-content: center; border: 2px solid #ccc;}
+  .chanLogoImgWrap img{width: 40px; margin-right: 0.05rem;}
 
 
 .popHeaderWrap > img {position: absolute; left: 1rem;}
