--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -312,3 +312,35 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   transform: rotate(-2deg);
   -ms-user-select: none;    -moz-user-select: -moz-none;   -khtml-user-select: none;   -webkit-user-select: none;   user-select: none;
 }
+
+
+#loading {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: 999999;
+  background: #0101014b;
+}
+
+@keyframes spinner {
+  from {transform: rotate(0deg); }
+  to {transform: rotate(360deg);}
+}
+
+#loading .spinner {
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 64px;
+  height: 64px;
+  margin-top: -32px;
+  margin-left: -32px;
+  border-radius: 50%;
+  border: 8px solid transparent;
+  border-top-color: #6768A7;
+  border-bottom-color: #6768A7;
+  animation: spinner .8s ease infinite;
+}
