--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -1,11 +1,13 @@
-*{
+/* *{
     /* -webkit-text-size-adjust:none;
     -ms-user-select: none;
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none; */
-}
+/* } */
+
+
 ::-webkit-scrollbar {
   display: none;
 }
