--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -262,36 +262,16 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 /* 팝업 효과 */
 @keyframes fadein {
-  from {
-      opacity:0;
-  }
-  to {
-      opacity:1;
-  }
+  from {opacity:0;} to {opacity:1;}
 }
 @-moz-keyframes fadein { /* Firefox */
-  from {
-      opacity:0;
-  }
-  to {
-      opacity:1;
-  }
+  from {opacity:0;} to {opacity:1; }
 }
 @-webkit-keyframes fadein { /* Safari and Chrome */
-  from {
-      opacity:0;
-  }
-  to {
-      opacity:1;
-  }
+  from {opacity:0;} to {opacity:1;}
 }
 @-o-keyframes fadein { /* Opera */
-  from {
-      opacity:0;
-  }
-  to {
-      opacity: 1;
-  }
+  from {opacity:0;} to {opacity: 1;}
 }
 
 /*채널상세/채널메인*/
