--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: 'KoPubDotumMedium';
-   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/KoPubDotumMedium.woff') format('woff');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/KoPubDotumMedium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -170,11 +170,11 @@ p{margin-bottom: 0; font-size: 1.5rem;}
       align-items: center;
       filter: drop-shadow(0 0 6px #0000002E);
   }
-  .chanLogoImgWrap {width: 60px; height:60px; border-radius: 60px; display: flex; align-items: center; justify-content: center; border: 2px solid #ccc;}
-  .chanLogoImgWrap img{width: 40px; margin-right: 0.05rem;}
+  .chanLogoImgWrap {width: 60px; height:60px; border-radius: 60px; display: flex; align-items: center; justify-content: center; border: 2px solid #ccc; -webkit-user-drag: none;}
+  .chanLogoImgWrap img{width: 40px; margin-right: 0.05rem; -webkit-user-drag: none;}
 
 
-.popHeaderWrap > img {position: absolute; left: 1rem;}
+.popHeaderWrap > img {position: absolute; left: 1rem; -webkit-user-drag: none;}
 .popHeaderWrap{position: fixed; justify-content: center; top: 0; box-sizing: border-box; display: flex; padding: 0.7rem 0.5rem; width: 100%; height: 50px;}
 
 
