--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -64,6 +64,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .font12{font-size: 12px}
 .font11{font-size: 11px}
 .font10{font-size: 10px}
+.font9{font-size: 9px}
+.font8{font-size: 8px}
 
 .fontBold{font-weight: bold;}
 
