--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -232,7 +232,10 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .introBackground{background-color: #6768A7; width: 100%; height: 100vh; padding-top: 10%}
 .introWhiteCard{background-color: #fff; min-height: 400px; border-radius: 10px; width: 90%; height: 40%; box-sizing: border-box; margin: 10% auto; }
 
-
+.readYnArea{
+  background-color: #6768A7; border-radius: 100%; height: 12px; width: 12px; float: left; position: absolute; top: 0; left: 0; margin: -6px; box-shadow: 0 0 5px #6768A7;
+  animation: fadein 0.4s;
+}
 
 .showModal-enter {animation: showModal-dialog-fade-in 0.2s ease;}
 .showModal-leave {animation: showModal-dialog-fade-out 0.2s ease forwards;}
