--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -237,6 +237,16 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   animation: fadein 0.4s;
 }
 
+.fadeInAnimation{
+  animation-name: fadein; animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+.fadeOutAnimation{
+  animation-name: fadeout; animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+
+
 .showModal-enter {animation: showModal-dialog-fade-in 0.2s ease;}
 .showModal-leave {animation: showModal-dialog-fade-out 0.2s ease forwards;}
 .showModal-enter-active {animation: showModal-dialog-fade-in 0.2s ease;}
