--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -6,7 +6,7 @@
     -webkit-user-select: none;
     user-select: none; */
 /* } */
-/*
+
 body {
   -webkit-text-size-adjust:none;
   -ms-user-select: none;
@@ -14,14 +14,15 @@ body {
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+
 }
 
 input {
-  -webkit-user-select:all !important;
-  -moz-user-select:all !important;
-  -ms-user-select:all !important;
-  user-select:all !important;
-} */
+  -webkit-user-select:auto !important;
+  -moz-user-select:auto !important;
+  -ms-user-select:auto !important;
+  user-select:auto !important;
+}
 
 @media screen and (max-width: 300px) {
   .font18{font-size: 16px}
@@ -365,7 +366,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
     width: 130px;
 }
 
-/* 게시판 편집 - 유민*/
+/* 게시판 관리 - 유민*/
 .sortable-chosen {
   border: 3px solid #ccc;
   background-color: rgba(186, 187, 215, 0.5);
