--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -17,6 +17,13 @@ body {
 
 }
 
+.editableContent {
+  -webkit-user-select: auto !important;
+  -moz-user-select: auto !important;
+  -ms-user-select: auto !important;
+  user-select: auto !important;
+}
+
 input {
   -webkit-user-select:auto !important;
   -moz-user-select:auto !important;
