--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -415,7 +415,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 }
 
 .btnPlus{
-  width:4rem; height:4rem;display: flex;
+  width:4rem; height:4rem;
+  display: flex;
   padding-top: 5px;
   justify-content: center; align-items: center;
   color:#6768a7; border:3px solid #6768a7; background-color:white ;
@@ -427,6 +428,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
   animation-name: fadein; animation-duration: 0.5s;
   animation-fill-mode: forwards;
-
+  position: fixed;
+  bottom: 5rem;
 
 }
