--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -32,15 +32,31 @@ input {
 }
 
 @media screen and (max-width: 300px) {
-  .font18{font-size: 16px}
-  .font16{font-size: 14px}
-  .font15{font-size: 13px}
-  .font14{font-size: 12px}
-  .font13{font-size: 11px}
-  .font12{font-size: 10px}
-  .font11{font-size: 9px}
-  .font10{font-size: 8px}
+  .font25{font-size: 22px !important}
+  .font22{font-size: 20px !important}
+  .font20{font-size: 18px !important}
+  .font18{font-size: 16px !important}
+  .font16{font-size: 14px !important}
+  .font15{font-size: 13px !important}
+  .font14{font-size: 12px !important}
+  .font13{font-size: 11px !important}
+  .font12{font-size: 10px !important}
+  .font11{font-size: 9px !important}
+  .font10{font-size: 8px !important}
+
+  .pagePaddingWrap {
+    padding: 0 0.7rem!important;
   }
+  .chanLogoImgWrap {
+    width: 30px!important;
+    height: 30px!important;
+    top: 30%!important;
+    margin-right: 10px!important;
+  }
+  .commonPushListTopArea .chanLogoImgWrap{
+    top: 10%!important;
+  }
+}
 
 ::-webkit-scrollbar {
   display: none;
@@ -360,7 +376,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 /*채널상세/채널메인*/
 .blackTextBox p {color: #fff;}
 .blackTextBox {float: left; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 3px 15px; margin-bottom: 10px; border-radius: 10px; background: rgb(0 0 0 / 50%); }
-
+.chanTextBox {max-width: calc(100% - 20px);}
 .whiteTextBox p {color: #000;}
 .whiteTextBox {float: left; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 3px 15px; margin-bottom: 10px; border-radius: 10px; background: rgba(255, 255, 255, 0.5); }
 
