--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -202,7 +202,16 @@ p{margin-bottom: 0; font-size: 1.5rem;}
  /* .profileTitle{font-size: 15px; font-weight: bold; color: #6768A7;} */
  .top5TitleWrap{margin-top: 1.5rem; border-bottom: 1px solid #6768A7; height: 35px; margin-bottom: 0.4rem}
 
-
+ .pushDetailPaperEffect {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-color: #e1e1f2;
+  bottom: 0;
+  right: 0;
+}
   .commonListTr{
     height: 70px;
     border-bottom: 1px solid #E4E4E4;
