--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -14,7 +14,6 @@ body {
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
-
 }
 
 .editableContent {
@@ -29,9 +28,19 @@ input {
   -moz-user-select:auto !important;
   -ms-user-select:auto !important;
   user-select:auto !important;
+  font-size: 14px !important;
+  border-radius: 5px !important;
+  border: 1px solid #ccc !important;
+  white-space: nowrap !important;
+  overflow: scroll hidden !important;
+  padding: 1px 5px !important;
+  color: #303030 !important;
+  background: ghostwhite !important;
 }
 
 @media screen and (max-width: 300px) {
+  input {font-size: 12px !important}
+  textArea {font-size: 12px !important}
   .font25{font-size: 22px !important}
   .font22{font-size: 20px !important}
   .font20{font-size: 18px !important}
@@ -45,7 +54,7 @@ input {
   .font10{font-size: 8px !important}
 
   .pagePaddingWrap {
-    padding: 0 0.7rem!important;
+    padding: 0 0.7rem;
   }
   .chanLogoImgWrap {
     width: 30px!important;
@@ -254,19 +263,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .mx-datepicker-popup {position: absolute; top: 300px; right: 2rem; z-index: 999999!important;}
 .mx-datepicker-range {width: calc(100%)!important; float: left;}
-.mx-input {
-  /* border: 2px solid #E4E4E4!important; */
-  border: none!important;
-  background: #e4e4e463!important;
-  box-shadow: none!important;
-  float: left;
-  border-radius: 12px!important;
-  padding: 0.4rem!important;
-  padding-right: 3rem!important;
-  box-sizing: border-box!important;
-  height: 40px!important;
 
-}
 .mx-icon-calendar {
   top: 20px!important;
   color: #6768A7!important;
@@ -276,7 +273,15 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   height: 1.5em!important;
 }
 
-.mx-input {font-size: 15px!important; padding-top: 8px!important;}
+.mx-input {
+  height: 40px!important;
+  border-radius: 5px !important;
+  padding: 1px 5px !important;
+  box-shadow: none!important;
+  float: left;
+  box-sizing: border-box!important;
+  border: none !important;
+}
 
 .introBackground{background-color: #6768A7; width: 100%; height: 100vh; padding-top: 10%}
 .introWhiteCard{background-color: #fff; min-height: 400px; border-radius: 10px; width: 90%; height: 40%; box-sizing: border-box; margin: 10% auto; }
