--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -288,6 +288,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .readYnArea{
   background-color: #6768A7; border-radius: 100%; height: 12px; width: 12px; float: left; position: absolute; top: 0; left: 0; margin: -6px; box-shadow: 0 0 5px #6768A7;
+  z-index: 9;
   animation: fadein 0.4s;
 }
 
