--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -121,6 +121,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .whiteColor{color: #fff;}
 .deepColor{color: #3E3F6A;}
+.commonBlue{color: #3b3dce!important;}
 .commonColor{color:#6768A7;}
 .commonBlack{color: #303030;}
 .grayBlack{color: #505050;}
