--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -127,6 +127,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .grayBlack{color: #505050;}
 .lightGray{color: #A1A1A1;}
 .lightPurple{color: rgba(186, 187, 215, 0.5);}
+/* 불투명 색: #dcddeb */
 
 .w-10P{width: 10%;}
 .w-20P{width: 20%;}
