--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -483,3 +483,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 
 .splide__pagination {bottom: 20px !important; position: fixed!important; z-index: 999999!important}
+
+#naverIdLogin_loginButton img {
+  height: 100%;
+}
