--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -6,7 +6,12 @@
     -webkit-user-select: none;
     user-select: none; */
 /* } */
-
+html {
+  max-width: 780px;
+  margin: 0 auto !important; 
+  height: 100%;
+  position: relative;
+}
 body {
   -webkit-text-size-adjust:none;
   -ms-user-select: none;
@@ -14,6 +19,9 @@ body {
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+  max-width: 780px;
+  margin: 0 auto !important; 
+  max-height: 1200px;
 }
 
 .editableContent {
@@ -211,7 +219,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .headerShadow{box-shadow: 0px 7px 9px -9px #00000036;}
 .footerShadow{box-shadow: 0px -7px 9px -9px #00000036;}
 .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100%; padding-top: 60px;}
-/* .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100vw; height: 100vh; padding-top: 60px; margin-bottom: 60px;} */
+/* .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100vh; padding-top: 60px; margin-bottom: 60px;} */
 .mt-header{margin-top: 50px;}
  /* .profileTitle{font-size: 15px; font-weight: bold; color: #6768A7;} */
  .top5TitleWrap{margin-top: 1.5rem; border-bottom: 1px solid #6768A7; height: 35px; margin-bottom: 0.4rem}
@@ -249,7 +257,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 
 .popHeaderWrap > img {position: absolute; left: 1rem; -webkit-user-drag: none;}
-.popHeaderWrap{position: fixed; justify-content: center; top: 0; box-sizing: border-box; display: flex; padding: 0.7rem 0.5rem; width: 100%; height: 50px;}
+.popHeaderWrap{position: absolute; justify-content: center; top: 0; box-sizing: border-box; display: flex; padding: 0.7rem 0.5rem; width: 100%; height: 50px;}
 
 
 .mx-table-date .today{
@@ -437,7 +445,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 #loading {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top:0;
   left:0;
   z-index: 999999;
@@ -474,12 +482,12 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
   z-index: 9;
 
-  border-radius:4rem; position:fixed; bottom: 80px; right: 10%;
+  border-radius:4rem; position:absolute; bottom: 80px; right: 10%;
   box-shadow: 2px 2px 7px 3px #ccc;
 
   animation-name: fadein; animation-duration: 0.5s;
   animation-fill-mode: forwards;
-  position: fixed;
+  position: absolute;
   bottom: 5rem;
 
 }
