--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -523,6 +523,6 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 }
 
 
-input, .mainRefreshBtn, .mainMenuIcon, .footerRouter, .roundTab, .searchIcon, .menuRow {
+input, .mainRefreshBtn, .mainMenuIcon, .footerRouter, .roundTab, .searchIcon, .menuRow, .commonPopHeaderWrap img {
   cursor: pointer;
 }
