--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -31,7 +31,7 @@ body {
   user-select: auto !important;
 }
 
-input {
+input, select {
   -webkit-user-select:auto !important;
   -moz-user-select:auto !important;
   -ms-user-select:auto !important;
