--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -616,3 +616,9 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 input, .mainRefreshBtn, .mainMenuIcon, .footerRouter, .roundTab, .searchIcon, .menuRow, .commonPopHeaderWrap img {
   cursor: pointer;
 }
+
+
+
+#pushListWrap span, #boardBodyArea span {
+    word-break: break-all;
+}
