--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -538,7 +538,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 #loading {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top:0;
   left:0;
   z-index: 999999;
@@ -552,7 +552,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 #loading .spinner {
   box-sizing: border-box;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   width: 64px;
