--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -28,6 +28,12 @@ body {
   overflow: hidden !important;
   list-style: none !important;
 }
+pre {
+  white-space: pre-wrap; word-break: break-all; overflow: auto;
+  font-family: KoPubDotumMedium !important;
+  font-size: 14px !important;
+
+}
 .cursorDragAll {
   -webkit-user-select: all !important;
   -moz-user-select: all !important;
