--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -32,8 +32,13 @@ pre {
   white-space: pre-wrap; word-break: break-all; overflow: auto;
   font-family: KoPubDotumMedium !important;
   font-size: 14px !important;
-
 }
+pre span{
+  white-space: pre-wrap; word-break: break-all; overflow: auto;
+  font-family: KoPubDotumMedium !important;
+  font-size: 14px !important;
+}
+
 .cursorDragAll {
   -webkit-user-select: all !important;
   -moz-user-select: all !important;
