--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -404,7 +404,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .popHeaderWrap > img {position: absolute; left: 1rem; -webkit-user-drag: none;}
 .popHeaderWrap{position: absolute; justify-content: center; top: 0; box-sizing: border-box; display: flex; padding: 0.7rem 0.5rem; width: 100%; height: 50px;}
 
-
+.commonMemoWorkStatHeaderColor {color: #7978BD;}
 .mx-table-date .today{
   color: #ff9f32!important;
 }
