--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -155,7 +155,28 @@ input, select {
 ::-webkit-scrollbar {
   display: none;
 }
+.okScrollBar::-webkit-scrollbar {
+    cursor: pointer;
+    display: block;
+    width: 10px;
+    height: 10px;
+  /* 스크롤바의 너비 */
+}
+.okScrollBar::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: #6768A7; /* 스크롤바의 색상 */
+    
+    border-radius: 5px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
 
+}
+
+.okScrollBar::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: inset 0px 0px 5px rgba((255, 255, 255, 0.719)11, 211, 211);
+}
 @font-face {
   font-family: 'KoPubDotumMedium';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/KoPubDotumMedium.woff') format('woff');
