--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -417,6 +417,19 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .header_footer{background-color:#ffffff; display:flex; align-items: center; }
 .headerShadow{box-shadow: 0px 7px 9px -9px #00000036;}
+/* .headerShadow{border-bottom : 2px solid #6768a7} */
+.newHeaderLine::before {
+  box-shadow: none !important;
+  content : "";
+  position: absolute;
+  bottom: 0;
+  height  : 1px;
+  width   : 90%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom : 2px solid #6768a7
+}
+
 .footerShadow{box-shadow: 0px -7px 9px -9px #00000036;}
 .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100%; padding-top: 50px; }
 /* .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100vh; padding-top: 60px; margin-bottom: 60px;} */
